--- a/chongwudaily/miniprogram/pages/quchong/quchong.wxml
+++ b/chongwudaily/miniprogram/pages/quchong/quchong.wxml
@@ -4,28 +4,28 @@
     <view class="xuan">
         <van-cell title="选择宠物" value="{{xuan_chong}}" clickable center bind:click="openchong" border="{{ false }}" />
     </view>
-    <van-popup round overlay-style="background-color:rgba(0,0,0,0.3)" show="{{ xuan_popup }}" position="bottom" bind:close="closechong">
+    <van-popup round overlay-style="background-color:rgba(0,0,0,0.3)" show="{{ xuan_popup }}" position="bottom" bind:click-overlay="closechong">
         <van-picker show-toolbar columns="{{ chong_columns }}" bind:cancel="closechong" bind:confirm="chong_confirm" />
     </van-popup>
    <!-- 驱虫 -->
     <view class="shi">
         <van-cell title="驱虫时间" value="{{yao_time}}" clickable center bind:click="openyao" border="{{ false }}" />
     </view>
-    <van-popup round overlay-style="background-color:rgba(0,0,0,0.3)" show="{{ yao_popup }}" position="bottom" bind:close="closeyao">
+    <van-popup round overlay-style="background-color:rgba(0,0,0,0.3)" show="{{ yao_popup }}" position="bottom" bind:click-overlay="closeyao">
         <van-datetime-picker show-toolbar type="datetime" value="{{ yao_currentDate }}" min-date="{{ yao_minDate }}" max-date="{{yao_maxDate}}" bind:cancel="closeyao" bind:confirm="yao_confirm" />
     </van-popup>
     <!-- 反应 -->
     <view class="hou">
         <van-cell title="后期反应" value="{{fan_hou}}" clickable center bind:click="openfan" border="{{ false }}" />
     </view>
-    <van-popup round overlay-style="background-color:rgba(0,0,0,0.3)" show="{{ fan_popup }}" position="bottom" bind:close="closefan">
+    <van-popup round overlay-style="background-color:rgba(0,0,0,0.3)" show="{{ fan_popup }}" position="bottom" bind:click-overlay="closefan">
         <van-picker show-toolbar columns="{{ fan_columns }}" bind:cancel="closefan" bind:confirm="fan_confirm" />
     </van-popup>
     <!-- 下次 -->
     <view class="xia">
         <van-cell title="下次时间" value="{{xia_time}}" clickable center bind:click="openxia" border="{{ false }}" />
     </view>
-    <van-popup round overlay-style="background-color:rgba(0,0,0,0.3)" show="{{ xia_popup }}" position="bottom" bind:close="closexia">
+    <van-popup round overlay-style="background-color:rgba(0,0,0,0.3)" show="{{ xia_popup }}" position="bottom" bind:click-overlay="closexia">
         <van-datetime-picker show-toolbar type="datetime" value="{{ xia_currentDate }}" min-date="{{ xia_minDate }}" max-date="{{ xia_maxDate }}" bind:cancel="closexia" bind:confirm="xia_confirm" />
     </van-popup>
     <!-- 品名 -->
