--- a/chongwudaily/miniprogram/pages/dangan/dangan.wxml
+++ b/chongwudaily/miniprogram/pages/dangan/dangan.wxml
@@ -30,6 +30,16 @@
         </van-button>
     </view> -->
 </view>
+<view class="backnews" wx:if="{{arrdang.length==0}}">
+    <image src="../../img/kong.png" class="pickong"></image>
+    <view>快添加新内容吧～～</view>
+</view>
+<view style="height:2vh;"></view>
+<view class="loading" wx:if="{{loading}}">
+    <van-loading type="spinner" color="#505050" size="21px" text-size="12px">正在加载...</van-loading>
+</view>
+<view wx:if="{{end}}" class="newsdown">已经到底了哦~</view>
+<view style="height:2vh;"></view>
 <view class="add" bindtap="to_jia">
     <image src="../../img/j2.png" class="pic_add" />
     <text>添加</text>
